--- a/styles.css
+++ b/styles.css
@@ -1,98 +1,98 @@
-:root{
-    --primary-color:#3498db;
-    --secondary-color:#2980b9;
-    --text-color:#ecf0f1;
-    --text-secondary-color:#000f1f;
-    --background-color:#34495e;
+:root {
+    --primary-color: #3498db;
+    --secondary-color: #2ecc71;
+    --background-color: #34495e;
+    --text-color: #ecf0f1;
+    --text-secondary-color: #000f1f;
 }
 
 body{
-    padding: 0;
     margin: 0;
+    padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: var(--text-color);
+    transition: background-color 0.5s ease;
+    
 } 
 
 .menu-lateral{
     position: fixed;
-    left: -300px;
     top: 0;
+    left: -300px;
     width: 300px;
     height: 100%;
     background-color: var(--background-color);
-    z-index: 2;
-    box-shadow: 0 0 20px  rgba(0,0,0,0.5);
+    z-index: 5;
+    box-shadow: 0 0 20px  rgba(0, 0, 0, 0.2);
+    transition: all 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
 
 .menu-lateral.ativo{
     left: 0;
 }
 
-.menu-lateral ul{
+.menu-lateral ul { 
     list-style-type: none;
     padding: 0;
     margin-top: 60px;
-} 
-
+  
+}
 .menu-lateral ul li {
     padding: 15px 30px;
-
-} 
-
-.menu-lateral ul li a{
-    text-decoration: none;
-    color: var(--text-color);
-    font-size: 18px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-} 
-
-.menu-lateral ul li a i{
-    font-size: 24px;
 }
+.menu-lateral ul li a {
+    color: var(--text-color);
+    text-decoration: none;
+    font-size: 18px;
+    align-items: center;
+    display: flex;
+    gap: 10px;
+}
+.menu-lateral ul li a i {
+    font-size: 24px;
+} 
 .menu-lateral ul li :hover {
     background-color: var(--secondary-color);
 }
-
-.menu-lateral ul li a i :hover {
+.menu-lateral ul li a i:hover{
     transform: translateX(5px)  rotate(5deg);
 }
 
 .botao-menu{
-    background-color: var(--primary-color);
     position: fixed;
     top: 20px;
     left: 20px;
-    z-index: 3;
-    border-radius: 5px;
-    font-size: 24px;
-    border: none;
+    background-color: var(--primary-color);
+    z-index: 6;
     padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
     color: var(--text-color);
+    transition: all 0.5s ease-in-out;
+} 
 
-}
-
-.botao-menu:hover{
+.bota-menu:hover{
     background-color: var(--secondary-color);
-
 }
 
 .botao-menu.ativo{
     left: 320px;
-} 
+}
 
 .conteudo{
+    position: relative;
     margin-left: 80px;
     padding: 40px;
-    color: var(--text-secondary-color);
     background-color: var(--text-color);
-} 
+    transition: all 0.5s ease;
+}
 
 .conteudo.ativo{
-    margin-left: 320px;
+    margin-left: 380px;
     background-color: var(--background-color);
-} 
+    color: #ecf0f1;
+}
 
 .background{
     position: fixed;
@@ -100,14 +100,18 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: 0 0 0 5 px rgba(0, 0, 0, 0.5);
+    background-color:rgba(0, 0, 0, 0.5);
     opacity: 0;
     visibility: hidden;
     z-index: 4;
-} 
+       
+}
 
 .background.ativo{
     opacity: 1;
     visibility: visible;
 
 }
+
+
+
